[gd_scene load_steps=4 format=3 uid="uid://magma_slime_unique_id"]

[ext_resource type="Script" path="res://scripts/magma_slime.gd" id="1_magma"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_magma"]
size = Vector2(48, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_damage_area"]
radius = 80.0

[node name="MagmaSlime" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_magma")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
color = Color(1, 0.4, 0.1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_magma")

[node name="DamageArea" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_damage_area")

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = false
